<resources>
    <string name="app_name">Shows Tracker</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="no_movies_found">No movies found</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_sort_by_default" translatable="false">@string/settings_sort_by_popularity_desc</string>
    <string name="settings_sort_by_popularity_desc" translatable="false">popularity.desc</string>
    <string name="settings_movies_to_watch_filter" translatable="false">movies_to_watch_filter</string>
    <string name="settings_movies_to_watch_filter_default" translatable="false">released_cinema</string>
    <string name="settings_movies_collection_filter" translatable="false">movies_collection_filter</string>
    <string name="settings_movies_collection_filter_default" translatable="false">all</string>
    <string name="settings_movies_to_watch_sort_by" translatable="false">movies_to_watch_sort</string>
    <string name="settings_movies_collection_sort" translatable="false">movies_collection_sort</string>
    <string name="settings_movies_to_watch_sort_direction" translatable="false">movies_to_watch_sort_direction</string>
    <string name="settings_movies_collection_sort_direction" translatable="false">movies_collection_sort_direction</string>
    <string name="settings_tv_shows_episodes_to_watch_filter" translatable="false">tv_shows_episodes_to_watch_filter</string>
    <string name="settings_tv_shows_episodes_to_watch_filter_default" translatable="false">released</string>
    <string name="settings_tv_shows_episodes_to_watch_sort_direction" translatable="false">tv_shows_episodes_to_watch_sort_direction</string>
    <string name="settings_tv_shows_collection_filter" translatable="false">tv_shows_collection_filter</string>
    <string name="settings_tv_shows_collection_filter_default" translatable="false">all</string>
    <string name="settings_tv_shows_collection_sort" translatable="false">tv_shows_collection_sort</string>
    <string name="settings_tv_shows_collection_sort_direction" translatable="false">tv_shows_collection_sort_direction</string>
    <string name="settings_discover_movies_show_watched" translatable="false">show_watched_movies_option</string>
    <string name="settings_discover_shows_show_watched" translatable="false">show_watched_shows_option</string>
    <string name="settings_discover_movies_option" translatable="false">discover_movies_option</string>
    <string name="settings_discover_movies_option_default" translatable="false">popular_option</string>
    <string name="settings_discover_shows_option" translatable="false">discover_shows_option</string>
    <string name="settings_discover_shows_option_default" translatable="false">popular_option</string>
    <string name="category_movies_to_watch">To watch</string>
    <string name="category_movies_not_aired">Not aired</string>
    <string name="category_movies_all">Collection</string>
    <string name="category_movies_discover">Discover</string>
    <string name="thumbnail">thumbnail</string>
    <string name="no_movie_data">No movie data</string>
    <string name="imdb">IMDb</string>
    <string name="movie_image_description">Movie image</string>
    <string name="show_image_description">TV tvShow image</string>
    <string name="overview_title">Overview:</string>
    <string name="add_movie">Add to collection</string>
    <string name="remove_movie">Remove movie</string>
    <string name="set_watched">Set watched</string>
    <string name="set_not_watched_movie">Set not watched</string>
    <string name="search_movie">Search new movie…</string>
    <string name="search_tv_show">Search new TV show…</string>
    <string name="filter_options">Filter options</string>
    <string name="sort_by_date">Sort by date</string>
    <string name="sort_by_rating">Sort by rating</string>
    <string name="popular">Popular</string>
    <string name="recommended">Recommended</string>
    <string name="cinema_released">Cinema release</string>
    <string name="digital_released">Digital release</string>
    <string name="physical_released">Physical release</string>
    <string name="sorting_options">Sorting options</string>
    <string name="show_all">Show all</string>
    <string name="not_released">Not released</string>
    <string name="default_average_vote">0.0</string>
    <string name="ascending_order">Ascending order</string>
    <string name="descending_order">Descending order</string>
    <string name="top_rated">Top rated</string>
    <string name="show_collection_movies">Show added movies</string>
    <string name="hide_collection_movies">Hide added movies</string>
    <string name="show_collection_tv_shows">Show added TV shows</string>
    <string name="hide_collection_tv_shows">Hide added TV shows</string>
    <string name="title_activity_shows">ShowsActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="no_shows">No tvShows found</string>
    <string name="category_shows_to_watch">To watch</string>
    <string name="category_shows_upcoming">Upcoming</string>
    <string name="category_shows_all">Collection</string>
    <string name="category_shows_discover">Discover</string>
    <string name="add_tv_show">Add to collection</string>
    <string name="remove_tv_show">Remove TV show</string>
    <string name="logo">Logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="sign_up_link">Create an account</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_account">Create account</string>
    <string name="already_a_member_login">Already a member? Log in</string>
    <string name="not_logged_in">Not logged in</string>
    <string name="sloth_icon">Sloth icon</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="feed">Feed TODO</string>
    <string name="shows">Movies</string>
    <string name="groups">Groups</string>
    <string name="log_out">Log out</string>
    <string name="tvShows">TV Shows</string>
    <string name="upcoming">Upcoming</string>
    <string name="update_data">Update data</string>
    <string name="search_show">Search new shows…</string>
    <string name="action_search">Search</string>
    <string name="sort_alphabetically">Sort alphabetically</string>
    <string name="released">Released</string>
    <string name="aired">Aired</string>
    <string name="no_movies_added">No movies</string>
    <string name="no_tv_shows_found">No TV shows found</string>
    <string name="no_tv_shows_added">No TV shows</string>
    <string name="no_tv_show_found">No TV show found</string>
    <string name="title_activity_settings">Settings</string>
    <string name="copy_right" translatable="false">Copyrights © %1$d</string>
    <string name="title_group_list">Groups</string>
    <string name="title_group_detail">Group Detail</string>
    <string name="group_image">Group image</string>
    <string name="title_activity_group">Group</string>
    <string name="default_number_of_users">10</string>
    <string name="group_title">Title</string>
    <string name="add_new_group_dialog">Add new group dialog</string>
    <string name="no_groups_added">Create or join a group</string>
    <string name="create_group">Create group</string>
    <string name="join_group">Join group</string>
    <string name="action_delete_group">Delete group</string>
    <string name="action_exit_group">Exit group</string>
    <string name="connection_issues">Connection issues</string>
    <string name="title_activity_tv_show">TV Show</string>
    <string name="tv_show_image">tv_show_image</string>
    <string name="movie_image">Movie image</string>
    <string name="quick_menu_button">Quick menu button</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_title_starting_section">Starting section</string>
    <string-array name="pref_section_titles">
        <item>Movies</item>
        <item>TV Shows</item>
        <item>Groups</item>
    </string-array>
    <string-array name="pref_section_values">
        <item>movies</item>
        <item>tv_shows</item>
        <item>groups</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>6 hours</item>
        <item>12 hours</item>
        <item>24 hours</item>
        <item>2 days</item>
        <item>1 week</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>6</item>
        <item>12</item>
        <item>24</item>
        <item>48</item>
        <item>168</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="libraries_used">
        Used libraries: \n
        \n\tFirebase
        \n\tObjectBox
        \n\tButterKnife
        \n\tFastAndroidNetworking
        \n\tPicasso
        \n\tAndroid About Page
        \n\tAndroid Floating Action Button
        \n\tTextDrawable
    </string>
    <string name="default_episode_info">S01E01</string>
    <string name="default_season_info">Season 1</string>
    <string name="ascending_order_by_date">Ascending by date</string>
    <string name="descending_order_by_date">Descending by date</string>
    <string name="title_activity_group_info">Group info</string>
    <string name="search">Search</string>
</resources>