<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/search"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_filter"
        android:icon="@drawable/ic_filter_options"
        android:title="@string/filter_options"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/menu_show_top_rated"
                android:title="@string/top_rated" />
            <item
                android:id="@+id/menu_show_popular"
                android:title="@string/popular" />
            <item
                android:id="@+id/menu_show_recommended"
                android:title="@string/recommended" />
        </menu>
    </item>

    <item
        android:id="@+id/show_hide_watched"
        android:title="@string/show_collection_movies" />

</menu>