<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/nav_group_1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_play_arrow"
            android:title="@string/feed" />
        <item
            android:id="@+id/nav_movies"
            android:icon="@drawable/ic_movie"
            android:title="@string/movies" />
        <item
            android:id="@+id/nav_tv_shows"
            android:icon="@drawable/ic_show"
            android:title="@string/tvShows" />
        <item
            android:id="@+id/nav_groups"
            android:icon="@drawable/ic_group"
            android:title="@string/groups" />
    </group>

    <group
        android:id="@+id/nav_group_2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info"
            android:title="@string/about" />

        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/log_out" />
    </group>

</menu>